# cme-tools-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ghcr.yml
app/: __init__.py  auth.py  config.py  main.py
app/models/: cme.py  commands.py  plan.py  responses.py
app/routers/: backup.py  capabilities.py  cme.py  config.py  health.py  show.py
app/services/: apply.py  backup.py  capabilities.py  command_filter.py  intent_service.py  plan_service.py  restore.py  ssh_manager.py  validate.py
app/utils/: ios_parser.py  logging.py
tests/: conftest.py  mock_ssh.py  test_allowlist.py  test_api.py  test_backup.py  test_cme.py  test_ios_parser.py  test_plan.py
